validator_derive/tests/compile-fail/unnamed_fields.rs
use validator::Validate;

#[derive(Validate)]
struct TupleStruct(String);

fn main() {}
