validator_derive/tests/compile-fail/unnamed_fields.stderr
error: struct has unnamed fields
 --> $DIR/unnamed_fields.rs:4:19
  |
4 | struct TupleStruct(String);
  |                   ^^^^^^^^
  |
  = help: #[derive(Validate)] can only be used on structs with named fields
